# testnet

./: .dockerignore  .gitignore  .gitmodules  .latexmkrc  Cargo.toml  README.md  calc_time.py  control_process.sh  dc-net-control.sh  dc-net-test.pem  generate_message.py  introduction.tex  main.tex  migrate_finish_file.sh  mitigate_finish_file.sh  paper_specific_macros.tex  preamble.tex  protocol.tex  pyserver.py  run_tests.sh  server_ctrl.sh  server_ctrl_multithread.sh  server_ctrl_side.sh  server_ctrl_success.sh  start-docker-gen.sh  start-docker-real-sgx.sh  start-docker.sh  test.rs  test.sh  time_cal.py  time_measurement.sh
.ssh/: known_hosts
aggregator/: Cargo.toml  agg-root-state.txt  agg-state1.txt
aggregator/src/: agg.rs  agg_nosgx.rs  agg_state.rs  main.rs  service.rs  util.rs
client/: Cargo.toml  server-keys.txt  user-state1.txt  user-state2.txt
client/src/: main.rs  save_msgpackage.rs  service.rs  user_state.rs  util.rs
common/: Cargo.toml
common/src/: aes_prng.rs  cli_util.rs  ecall_wrapper.rs  enclave.rs  enclave_wrapper.rs  error.rs  funcs_nosgx.rs  lib.rs  log_time.rs  types.rs  types_nosgx.rs
common/tests/: enclave.rs
dockerfiles/: Dockerfile
enclave/: Cargo.toml  Enclave.config.xml  Enclave.edl  Makefile
enclave/.cargo/: config.toml
enclave/src/: attestation.rs  lib.rs  messages_types.rs  tests.rs  unseal.rs
enclave/src/crypto/: aes_rng.rs  dining_crypto.rs  keys.rs  mod.rs
enclave/src/ecall/: aggregation.rs  keygen.rs  mod.rs  server.rs  submit.rs  user.rs
enclave/src/types/: mod.rs  traits.rs
interface/: Cargo.toml
interface/src/: aes_rng.rs  array2d.rs  ecall_interface_types.rs  lib.rs  nosgx_protected_keys.rs  params.rs  sgx_protected_keys.rs  sgx_signature.rs  user_request.rs
prototype/: .clang-format  .gitignore  CMakeLists.txt  Cargo.toml  Makefile  README.md  fmt.sh  run_tests.sh  server_ctrl.sh
prototype/.cargo/: config.toml
prototype/App/services/: enclave.proto
prototype/aggregator/: Cargo.toml  build.rs
prototype/aggregator/src/: agg_state.rs  main.rs  service.rs  util.rs
prototype/app/: CMakeLists.txt  Cargo.toml  Enclave_u.c  Enclave_u.h  build.rs  config.cpp  config.h  logging.cpp  logging.h  main.cpp  ocalls.cpp  rpc.cpp  rpc.h  rpc_types.h  utils.cpp  utils.h
prototype/app/src/: aggregator.proto  enclave_wrapper.rs  main.rs
prototype/client/: Cargo.toml  build.rs  main.rs
prototype/client/src/: aggregator.rs  main.rs  user_state.rs  util.rs
prototype/cmake/: ConfigSGX.cmake  FindGRPC.cmake  FindSGXPSW.cmake  FindSGXSSL.cmake
prototype/common/: Cargo.toml  Enclave_u.c  Enclave_u.h  build.rs  converter.h  dcnet.cpp  dcnet.h  error_code.h  interface_structs.h  message.cpp  messages.h  messages.hpp  sched.cpp  sched.h  sig.h
prototype/common/src/: aggregator.proto  cli_util.rs  dc_proto.proto  enclave_wrapper.rs  lib.rs
prototype/dockerfiles/: Dockerfile  Makefile
prototype/enclave/: CMakeLists.txt  Cargo.toml  Enclave.config.xml  Enclave.edl  Enclave_t.c  Enclave_t.h  Makefile  crypto.h  ecall_aggregate.cpp  ecall_scheduling.cpp  log.h  random.cpp  random.h  scheduler.cpp  scheduler.h  test_aggregate.h  test_all.cpp  test_random.h  test_scheduling.h  types.cpp  workspace.code-workspace
prototype/enclave/src/: aggregation.rs  attestation.rs  crypto.rs  error.rs  keygen.rs  lib.rs  macros.rs  messages_types.rs  submit.rs  tests.rs  unseal.rs
prototype/enclave/src/crypto/: dining_crypto.rs  keys.rs  mod.rs  sgx_signature.rs  sig.rs
prototype/enclave/src/ecall/: aggregation.rs  keygen.rs  mod.rs  register.rs  seal_unseal.rs  server.rs  submit.rs  user.rs
prototype/enclave/src/types/: aggregated_msg.rs  byte_array.rs  error.rs  message.rs  mod.rs  traits.rs
prototype/enclave/src/utils/: mod.rs  seal_unseal.rs  serde.rs
prototype/go/: README.md  aggregator_test.go  dcnet.go  enclave.go  get_proto.sh  go.sum  scheduler.go  scheduler_test.go  types.go
prototype/go/main/: main.go
prototype/go/rpc/: enclave.pb.go  enclave_grpc.pb.go  get_proto.sh  pretty.go
prototype/interface/: Cargo.toml  interface_structs.h
prototype/interface/src/: aggregation.rs  ecall_interface.rs  ecall_interface_types.rs  footprint_sched.rs  key.rs  lib.rs  message.rs  params.rs  sealed_types.rs  sgx_protected_keys.rs  sgx_signature.rs  signature.rs  traits.rs  user_request.rs
prototype/old/: CMakeLists.txt
prototype/old/app/: Enclave_u.c  Enclave_u.h  config.cpp  config.h  logging.h  main.cpp  rpc.cpp  rpc_types.h  utils.cpp
prototype/old/cmake/: ConfigSGX.cmake  Init.cmake
prototype/old/common/: error_code.h  message.cpp  messages.hpp  sched.cpp  sched.h  sig.h
prototype/old/dockerfiles/: Dockerfile.builder  Dockerfile.deploy
prototype/old/enclave/: CMakeLists.txt  Enclave.edl  Enclave_t.h  crypto.cpp  ecall_scheduling.cpp  ecall_send.cpp  ecalls.h  log.cpp  log.h  random.h  scheduler.cpp  scheduler.h  test_aggregate.h  test_random.h  types.h
prototype/old/go/: README.md  dcnet.go  enclave.go  go.mod  scheduler.go  types.go
prototype/old/go/rpc/: enclave.pb.go
prototype/old/python/: enclave_pb2_grpc.py  get_proto.sh
prototype/old/scripts/: install_grpc.sh
prototype/old/services/: enclave.proto
prototype/python/: enclave_pb2.py  rpc_test.py
prototype/rust/: Makefile  start-docker.sh
prototype/rust/app/: Enclave_u.c  Enclave_u.h  build.rs
prototype/rust/app/src/: enclave_tests.rs  enclave_wrapper.rs  main.rs  utils.rs
prototype/rust/enclave/: Cargo.toml  Enclave.edl  Enclave_t.c  Enclave_t.h  Makefile  Xargo.toml
prototype/rust/enclave/src/: crypto.rs  error.rs  lib.rs  submit.rs  tests.rs
prototype/rust/interface/: Cargo.toml
prototype/rust/interface/src/: footprint_sched.rs  key.rs  lib.rs  message.rs  params.rs
prototype/scripts/: install_sgx_sdk.sh
prototype/server/: Cargo.toml
prototype/server/src/: main.rs  server_state.rs  service.rs  util.rs
prototype/services/: enclave.proto
server/: Cargo.toml  server-state1.txt  server-state2.txt
server/src/: aes_prng.rs  main.rs  server.rs  server_concurrency.rs  server_nosgx.rs  server_state.rs  service.rs  util.rs
(+34 files in other folders)
