[workspace]

members = ["common", "client", "interface", "aggregator", "server", "enclave" ]
#exclude = ["enclave"]

[profile.release]
lto = true

[patch.crates-io]
ed25519-dalek = {path = "third_party/ed25519-dalek-1.0.1"}
curve25519-dalek = {path = "third_party/curve25519-dalek-3.2.1"}
x25519-dalek = {path = "third_party/x25519-dalek-1.2.0"}