[package]
name = "sgxdcnet-aggregator"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "sgxdcnet-aggregator"
path = "src/main.rs"

[dependencies]
interface = { path = "../interface" }
common = {path = "../common"}
thiserror = "1.0"
# CLI dependencies
clap = "2.33"
serde = "1.0"
base64 = "0.13"
# Web service dependencies
log = "0.4"
dotenv = "0.15"
env_logger = "0.9"
actix-web = "3.3"
futures = "0.3"
ed25519-dalek = { package = "ed25519-dalek", version = "1", features = ["serde"] }
rand = "0.7"
sha2 = "0.9"
serde_json = "1.0"
serde_cbor = "0.11.2"
# multi-thread dependencies
rayon = "1.5"