[package]
name = "sgxdcnet-client"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "sgxdcnet-client"
path = "src/main.rs"

[dependencies]
interface = { path = "../interface" }
common = {path = "../common"}
clap = "2.33"
serde = "1.0"
base64 = "0.13"
thiserror = "1.0"
env_logger = "0.9"
log = "0.4"
actix-web = "3.3"
