[package]
name = "common"
version = "1.0.0"
authors = ["Authors"]
build = "build.rs"
edition = "2018"

[dependencies]
log = "0.4.11"
#pretty_env_logger = "0.4.0"
#base64 = {version = "0.13.0", default-features = false}
base64 = "0.13.0"
hexdump = "0.1.0"
rand = "0.6"
hex = { version = "0.4", default-features = false }
thiserror = "1.0"
itertools = "0.10.3"

# for PRNG
aes = "0.7"
cipher = "0.3"
ctr = "0.8"
rand_core = {version="0.6", default-features = false}
hkdf = "0.8.0"
sha2 = "0.8.0"
byteorder = "1.4.3"

ed25519-dalek = { version = "0.9.1", features = ["serde"]  }
x25519-dalek = "0.5.2"
rand_os = "0.1"

sgx_types = { rev = "v1.1.6", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_serialize = { rev = "v1.1.6", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_serialize_derive = { rev = "v1.1.6", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_urts = { rev = "v1.1.6", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
serde_cbor = "0.11.1"
serde = { version = "1.0", features = ["derive"] }
interface = { path = "../interface" }
quick-error  = "2.0.1"

tonic = "0.4"
prost = "0.7"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
env_logger = "0.8.4"

[build-dependencies]
tonic-build = "0.4"
