[package]
name = "dcnetenclave"
version = "1.0.0"
authors = ["Fan Zhang <bl4ck5unxx@gmail.com>"]

[lib]
name = "dcnetenclave"
crate-type = ["staticlib"]

[features]
default = []

[dependencies]
interface = { path = "../interface", default-features = false, features = ["trusted"] }

sgx_types = { rev = "v1.1.6", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tstd = { rev = "v1.1.6", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tse = { rev = "v1.1.6", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_trts = { rev = "v1.1.6", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tcrypto = { rev = "v1.1.6", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tunittest = { rev = "v1.1.6", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tseal = { rev = "v1.1.6", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_rand = { rev = "v1.1.6", git = "https://github.com/apache/teaclave-sgx-sdk.git" }

hex = { version = "0.4", default-features = false, features = ["alloc"] }
serde = { git = "https://github.com/bl4ck5un/serde-sgx", features = ["derive"] }
serde_cbor = {git = "https://github.com/bl4ck5un/cbor-sgx"}
log = { git = "https://github.com/bl4ck5un/log-sgx" }
env_logger = { git = "https://github.com/bl4ck5un/env_logger-sgx" }
quick-error = { git = "https://github.com/mesalock-linux/quick-error-sgx" }
aes-ctr = { git = "https://github.com/mesalock-linux/rustcrypto-stream-ciphers-sgx" }

byteorder = {version = "1.4.3", default-features = false}
hkdf = {version = "0.8.0", default-features = false}
sha2 = {version = "0.8.2", default-features = false}
rand = {version ="0.8.4", default-features = false}
rand_core = "0.6.3"

x25519-dalek = { version = "1.2.0", default-features = false, features = ["u64_backend", "serde_sgx"] }
ed25519-dalek = { version = "1", default-features = false, features = ["u64_backend", "serde_sgx"] }
