[package]
name = "interface"
version = "0.1.0"
authors = ["Fan Zhang <bl4ck5unxx@gmail.com>"]
edition = "2018"
description = "data structures shared by trusted & untrusted land"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# both (must be SGX compatible e.g. no_std)
cfg-if = "1.0"
hex = { version = "0.4", default-features = false, features = ["alloc"] }
sgx_types = { rev = "v1.1.6", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
base64 = { version = "0.13", default-features = false, features = ["alloc"] }
rand_core = {version="0.6", default-features = false}
ed25519-dalek = { version = "0.9.1", default-features = false, features = ["serde"] }
sha2 = { version = "0.8.2", default-features = false}

# untrusted
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }

# trusted
serde_sgx = { package = "serde", git = "https://github.com/bl4ck5un/serde-sgx", features = ["derive"], optional = true }
sgx_tstd = { rev = "v1.1.6", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
sgx_rand = { rev = "v1.1.6", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
sgx_rand_derive = { rev = "v1.1.6", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
sgx_tcrypto = { rev = "v1.1.6", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
byteorder = {version = "1.4.3", default-features = false, optional = true}

[features]
default = ["untrusted"]
untrusted = ["serde"]

trusted = [
    "serde_sgx",
    "sgx_tstd",
    "sgx_rand", 
    "sgx_rand_derive",
    "sgx_tcrypto",
    "byteorder",
]
