[package]
name = "sgxdcnet-aggregator"
version = "0.1.0"
edition = "2018"

[[bin]] 
name = "sgxdcnet-aggregator"
path = "src/main.rs"

[dependencies]
tonic = "0.4"
prost = "0.7"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
interface = { path = "../interface" }
common = {path = "../common"}
rand = "0.8"

[build-dependencies]
tonic-build = "0.4"
