[package]
name = "app"
version = "1.0.0"
authors = ["The Teaclave Authors"]
build = "build.rs"

[dependencies]
log = "0.4.11"
pretty_env_logger = "0.4.0"
#base64 = {version = "0.13.0", default-features = false}
base64 = "0.13.0"
hexdump = "0.1.0"

sgx_types = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_serialize = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_serialize_derive = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_urts = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
interface = { path = "../interface" }