[package]
name = "sgxdcnet-client"
version = "0.1.0"
edition = "2018"

[[bin]] 
name = "sgxdcnet-client"
path = "src/main.rs"

[dependencies]
tonic = "0.4"
prost = "0.7"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
interface = { path = "../interface" }
common = {path = "../common"}
rand = "0.8"
clap = "2.33"
serde = "1.0"
base64 = "0.13"

[build-dependencies]
tonic-build = "0.4"
