[package]
name = "dcnetenclave"
version = "1.0.0"
authors = ["Fan Zhang <bl4ck5unxx@gmail.com>"]

[lib]
name = "dcnetenclave"
crate-type = ["staticlib"]

[features]
default = []

[dependencies]
sgx_types = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tstd = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_trts = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tcrypto = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tunittest = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tseal = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_rand = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
hex = { git = "https://github.com/mesalock-linux/rust-hex-sgx" }
sha2 = {git = "https://github.com/mesalock-linux/rustcrypto-hashes-sgx"}
quick-error = { git = "https://github.com/mesalock-linux/quick-error-sgx" }
hkdf = {branch = "v0.8.0-sgx", git="https://github.com/bl4ck5un/KDFs"}
byteorder = {git = "https://github.com/mesalock-linux/byteorder-sgx"}
serde = { git = "https://github.com/mesalock-linux/serde-sgx", features = ["derive"] }
serde_json = { git = "https://github.com/mesalock-linux/serde-json-sgx" }
interface = { path = "../interface", default-features = false, features = ["trusted"] }