[package]
name = "interface"
version = "0.1.0"
authors = ["Fan Zhang <bl4ck5unxx@gmail.com>"]
edition = "2018"
description = "data structures shared by trusted & untrusted land"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# both
cfg-if = "1.0"
hex = { version = "0.4", default-features = false }
sgx_types = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }

# untrusted
serde = { version = "1.0", features = ["derive"], optional = true }
serde-big-array = { version = "0.3.0", optional = true }

# trusted
serde_sgx = { package = "serde", git = "https://github.com/mesalock-linux/serde-sgx", features = ["derive"], optional = true }
serde-big-array_sgx = { package = "serde-big-array", git = "https://github.com/mesalock-linux/serde-big-array-sgx", optional = true }
sgx_tstd = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
sgx_rand = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
sgx_rand_derive = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
sgx_tcrypto = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
sha2 = {git = "https://github.com/mesalock-linux/rustcrypto-hashes-sgx", optional = true}
byteorder = {git = "https://github.com/mesalock-linux/byteorder-sgx", optional = true}

[features]
default = ["untrusted"]
untrusted = ["serde", "serde-big-array"]
trusted = [
    "serde_sgx", "serde-big-array_sgx",
    "sgx_tstd",
    "sgx_rand", "sgx_rand_derive",
    "sgx_tcrypto",
    "sha2",
    "byteorder",
]