[package]
name = "dcnetenclave"
version = "1.0.0"
authors = ["Fan Zhang <bl4ck5unxx@gmail.com>"]

[lib]
name = "dcnetenclave"
crate-type = ["staticlib"]

[features]
default = []

[dependencies]
sgx_types = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tstd = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_trts = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tcrypto = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tunittest = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
interface = { path = "../interface", default-features = false, features = ["trusted"] }
hex = { git = "https://github.com/mesalock-linux/rust-hex-sgx" }
quick-error = { git = "https://github.com/mesalock-linux/quick-error-sgx" }